<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:translationY="250dp">

    <Switch
        android:id="@+id/toggleScrollbars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:checked="true"
        android:text="@string/toggle" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:text="@string/button_1" />

            <Button
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:text="@string/button_2" />

            <Button
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:text="@string/button_3" />

            <Button
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:text="@string/button_4" />

            <Button
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:text="@string/button_5" />

            <Button
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:text="@string/button_6" />

            <Button
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:text="@string/button_7" />

        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>